@@ -194,6 +194,14 @@ public class ProfilePager extends Activity {
                     thisUser = null;
                 }
 
+                if (thisUser != null) {
+                    try {
+                        FollowersDataSource.getInstance(context).createUser(thisUser, sharedPrefs.getInt("current_account", 1));
+                    } catch (Exception e) {
+                        // the user already exists. don't know if this is more efficient than querying the db or not.
+                    }
+                }
+
                 new GetActionBarInfo().execute();
             }
         });
