@@ -9,6 +9,7 @@
     &#8226; Changed the conversation and discussion style<br/>
     &#8226; Made a drawer item for saved searches<br/>
     &#8226; Opening notifications will now take you to the correct place<br/>
+    &#8226; Improved auto-complete of users. Opening their profile will now make them searchable<br/>
     &#8226; RTL support for Android 4.2 and above<br/>
     &#8226; Save and destroy saved searches<br/>
     &#8226; Much more efficient and useful highlighting of users, hashtags, and links<br/>
